--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,17 @@
-body 
-{
+* {
+    font-family: 'Bebas Neue', cursive;
+}
+
+body {
     margin: 0px;
     padding: 0px;
 
 }
-.background
-{
+
+.background {
     width: 100%;
     height: 100vh;
-    background-image:url(pizza.jpg);
+    background-image: url(pizza1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
