--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
     .img-googleplay {
         width:200px;
         height:100px;
-        backgroung-image: url(play.png);
+        background-image: url(play.png);
         background-size: 50%
         background-repeat: no-repeat;
     }
