--- a/butoane.css
+++ b/butoane.css
@@ -10,8 +10,13 @@ ul {
 ul li {
     list-style: none;
     display: inline-block;
+    float: left;
 }
 
 ul li a {
 text-decoration: none;
+font-size: 14px;
+font-family: arial;
+colour: #FFFF00
+
 }
