--- a/butoane.css
+++ b/butoane.css
@@ -3,7 +3,13 @@
     padding: 0;
 }
 
-ul {
+ body{
+    background-color: #FFFFFF
+ }
+nav{
+    width: 100%;
+    height: 100px;
+    background-color: #FFFF00
 
 }
 
@@ -11,6 +17,7 @@ ul li {
     list-style: none;
     display: inline-block;
     float: left;
+    line-height: 100px;
 }
 
 ul li a {
@@ -18,5 +25,6 @@ text-decoration: none;
 font-size: 14px;
 font-family: arial;
 colour: #FFFF00
+padding: 0 20px;
 
 }
