--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,205 @@
-* {
-    font-family: 'Bebas Neue', cursive;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
 }
 
-body {
-    margin: 0px;
-    padding: 0px;
-}  
+html{
+    scroll-behavior: smooth;
+}
 
-.background {
+section{
+width: 100%;
+height: 100vh;
+}
+
+section nav{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: fixed;
+    right: 0;
+    left: 0;
+    background: orange;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    z-index: 1000;
+    
+}
+
+section nav  ul{
+    list-style: none;
+}
+
+section nav  ul li{
+    display: inline-block;
+    margin: 0 15px;
+}
+
+section nav  ul li a{
+    text-decoration: none;
+    color: #000;
+    font-weight: 500;
+    font-size: 17px;
+    transition: 0.1s;
+}
+
+section nav  ul li a::after{
+    content: '';
+    width: 0;
+    height: 2px;
+    background: white;
+    display: block;
+    transition: 0.2s linear;
+}
+
+section nav  ul li a:hover::after{
     width: 100%;
-    height: 100vh;
-    background-image: url(pizza1.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+}
+
+section nav  ul li a:hover{
+    color: white;
+}
+
+section nav .icon i{
+    font-size: 18px;
+    color: #000;
+    margin: 0 5px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+section nav .icon i:hover{
+    color: white;
+}
+
+section .main{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    position: relative;
+    top: 130px;
+}
+
+section .main .men_text h1{
+    font-size: 60px;
+    position: relative;
+    top: -90px;
+    left: 20px;
+}
+
+section .main .men_text h1 span{
+    margin-left: 15px;
+    color: #fac031;
+    font-family: mv boli;
+    line-height: 22px;
+    font-size: 70px;
+}
+
+section .main .main_image img{
+    width: 700px;
+    position: relative;
+    left: 70px;
+}
+
+section p{
+    width: 650px;
+    text-align: justify;
+    position: relative;
+    left: 123px;
+    bottom: 120px;
+    line-height: 22px;
+}
+
+section .main_btn{
+    background: #fac031;
+    position: relative;
+    left: 123px;
+    bottom: 30px;
+    width: 150px;
+    cursor: pointer;
+    padding: 5px;
+}
+
+section .main_btn a{
+    color: white;
+    margin-right: 5px;
+    text-decoration: none;
+}
+
+section .main_btn i{
+    color: white;
+    transition: 0.3s;
+}
+
+section .main_btn:hover i{
+    transform: translateX(7px);
+}
+
+
+
+/*Meniu*/
+
+.meniu{
+    width: 100%;
+    padding: 70px 0;
+}
+
+.menu h1{
+    font-size: 55px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+
+.meniu h1 span{
+    color: #fac031;
+    margin-left: 15px;
+    font-family: mv boli;
+}
+
+.meniu h1 span::after{
+    contetn: '';
+    width: 100%;
+    height: 2px;
+    background: #fac031;
+    display: block;
+    position: relative;
+    bottom: 15px;
+}
+
+.meniu .meniu_box{
+    width: 95%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 15px;
+}
+
+.meniu .meniu_box .meniu_card{
+    width: 325px;
+    height: 480px;
+    padding: 10px;
+    margin-bottom: 20px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+}
+
+.meniu .meniu_box .meniu_card .meniu_image{
+    width: 300px;
+    height: 200px;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.meniu .meniu_box .meniu_card .meniu_image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    transition: 0.3s;
+}
+
+.meniu .meniu_box .meniu_card .meniu_image:hover img{
+    transform: scale(1.1);
 }
