--- a/styles.css
+++ b/styles.css
@@ -276,3 +276,81 @@ section .main_btn:hover i{
     margin: 0 80px;
     transition: 0.3s;
 }
+
+
+
+/*Comanda*/
+
+.comanda{
+    width: 90%;
+    height: 100vh;
+    padding: 70px 0;
+    background-image: url(90em_fek6_210524.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.comanda h1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #000;
+    font-size: 55px;
+}
+
+.comanda h1 span{
+    color: #fac031;
+    margin-right: 15px;
+    font-family: mv boli;
+}
+
+.comanda h1 span::after{
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: #fac031;
+    display: block;
+    position: relative;
+    bottom: 15px;
+}
+
+.comanda .comanda_main{
+    align-items: center;
+    justify-content: space-around;
+}
+
+.comanda .comanda_main .comanda_image img{
+    width: 600px;
+}
+
+.comanda .comanda_main form .input p{
+    line-height: 25px;
+}
+
+.comanda .comanda_main form .input{
+    margin: 5px;
+}
+
+.comanda .comanda_main form .input input{
+    width: 300px;
+    height: 35px;
+    padding: 0 10px;
+    border: 2px solid blanchedalmond;
+    background: blanchedalmond;
+    outline: none;
+    border-radius: 3px;
+}
+
+.comanda .comanda_main form .input input:focus{
+    border: 2px solid #fac031;
+}
+
+.comanda .comanda_main form .comanda_btn{
+    padding: 1px 0;
+    background: #fac031;
+    color: white;
+    width: 40%;
+    text-align: center;
+    margin-top: 20px;
+    text-decoration: none;
+}
